install_data(
    'icon.png',
    install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', '128x128', 'apps'),
    rename: meson.project_name() + '.png'
)

install_data(
    'launcher.desktop',
    install_dir: join_paths (get_option ('datadir'), 'applications'),
    rename: meson.project_name () + '.desktop'
)
