install_data(
  'icon.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '128x128' / 'apps',
  rename: meson.project_name() + '.png'
)

install_data(
  'gschema.xml',
  install_dir: get_option('datadir') / 'glib-2.0' / 'schemas',
  rename: meson.project_name() + '.gschema.xml'
)

install_data(
  'launcher.desktop',
  install_dir: get_option('datadir') / 'applications',
  rename: meson.project_name() + '.desktop'
)

install_data(
  'metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo',
  rename: meson.project_name() + '.metainfo.xml'
)
